Vehicle Insurance/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Car_Make__c</fullName>
        <label>Car_Make</label>
        <picklist>
            <picklistValues>
                <fullName>Maruti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat Logo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <label>Car Model</label>
        <picklist>
            <picklistValues>
                <fullName>Audi A4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi A3 Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi A6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City_of_Registration__c</fullName>
        <label>City of Registration</label>
        <picklist>
            <picklistValues>
                <fullName>Ahemdabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dehli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nashik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TwoWheelerMake__c</fullName>
        <label>TwoWheelerMake</label>
        <picklist>
            <picklistValues>
                <fullName>Suzuki</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yamaha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bajaj</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kinetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TVS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TwoWheelerModel__c</fullName>
        <label>TwoWheelerModel</label>
        <picklist>
            <picklistValues>
                <fullName>Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avenger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harely Davidson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jupiter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KTM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pep+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pleasure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Royal Enfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Royal Enfield Classic 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Royal Enfield Continental GT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scooty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unicorn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <label>Vehicle Type</label>
        <picklist>
            <picklistValues>
                <fullName>Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two-Wheeler</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year_of_Vehicle_Registration__c</fullName>
        <label>Year of Vehicle Registration</label>
        <picklist>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>